--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,2 +1,3 @@
 [phases.setup]
-  nixPkgs = ['...', 'gcc', 'python38']
+  nixPkgs = ['...', 'python311']
+  aptPkgs = ['build-essential', 'glibc-source']
