--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,3 +1,3 @@
 [phases.setup]
-  nixPkgs = ['...', 'python311']
+  nixPkgs = ['...', 'gcc', 'python311']
   aptPkgs = ['build-essential', 'glibc-source']
